color picker displaying, z-index fixed, still need fix for event propagation

--- a/public/css/sass/partials/_base.scss
+++ b/public/css/sass/partials/_base.scss
@@ -7,3 +7,8 @@
 .quill {
   height: 400px;
 }
+
+.sketch-picker {
+  position: fixed;
+  z-index: 1000;
+}
